<resources>
    <string name="app_name">CSCB07-project</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_for_climate">Action For Climate</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="don_t_have_an_account_yet_sign_up_here">Don\'t have an account yet? Sign Up here!</string>
    <string name="your_choice_can_save_the_planet">Your Choice Can Save the PLANET</string>
    <string name="climate">CLIMATE</string>
    <string name="For">FOR</string>
    <string name="action">ACTION</string>
    <string name="create_your_new_account">Create Your New Account</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="forget_password">Forget Password?</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address1">Email Address</string>
    <string name="reset">Reset</string>
    <string name="enter_the_email_associated_with_your_account_we_will_send_out_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account.We will send out an email with instructions to reset your password.</string>
    <string name="search_suggestions_here">Search Suggestions Here:</string>
</resources>