<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/landingbackgroud"
    tools:context=".SignUpActivity">

    <!-- Email Input -->

    <TextView
        android:id="@+id/signuptext1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="120dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signuptext2"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signuptext1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="70dp"
        android:text="@string/create_your_new_account"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/CredentialEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signuptext2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="12dp" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CredentialEmail"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        />

    <!-- Password Input -->
    <EditText
        android:id="@+id/logInPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_below="@id/signUpEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_below="@id/logInPassword"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"/>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black2"
        android:padding="12dp"
        android:text="Sign Up"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/redirectToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInButton"
        android:layout_marginStart="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:padding="12dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>